--- a/calculadora.html
+++ b/calculadora.html
@@ -12,6 +12,10 @@ function inverso() {
   var num = document.getElementById("n1");
   num.value = 1/num.value;
 }
+function raiz_cuadrada() {
+  var num = document.getElementById("n1");
+  num.value = Math.sqrt(num.value);
+}
 </script>
 </head>
 <body>
@@ -20,5 +24,7 @@ function inverso() {
 
   <button onclick="cuadrado()"> x<sup>2</sup> </button>
   <button onclick="inverso()"> 1/x </button>
+  <button onclick="raiz_cuadrada()"> sqrt(x) </button>
+
 </body>
 </html>
